# capsule-litellm

./: README.md  pyproject.toml
src/capsule_litellm/: __init__.py  callback.py
tests/: test_callback.py
